--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,7 +85,7 @@
     {{ alert }}
   </p>
   <hr />
-  <div class="d-flex flex-row">
+  <div class="d-flex flex-row flex-wrap">
     <span class="m-10" *ngFor="let word of words; let i = index">{{
       i + 1 + "." + word
     }}</span>
